vlib/v/checker/tests/inout/mod_op_wrong_right_type_err_a.out
vlib/v/checker/tests/inout/mod_op_wrong_right_type_err_a.v:2:6: error: right type of `%` cannot be non-integer type f64
    1| fn main() {
    2|     1 % 0.5
               ~~~
    3| }
