vlib/v/checker/tests/inout/mod_op_wrong_right_type_err_a.vv
fn main() {
	1 % 0.5
}
